# Offset_ERP

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
jobs/: forms.py  models.py  urls.py  views.py
jobs/static/css/: styles.css
jobs/templates/jobs/: job_create.html  job_edit.html  job_list.html
recipes/: admin.py  forms.py  models.py  urls.py  views.py
recipes/templates/recipes/: bulk_upload.html  sku_confirm_delete.html  sku_form.html  sku_list.html
templates/: base.html  home.html
