[tool.poetry]
name = "offset-erp"
version = "0.1.0"
description = ""
authors = ["Mahmood <mahmood7692@gmail.com>"]
readme = "README.md"

packages = [{ include = "config" }]  # Ensure this matches your folder structure

[tool.poetry.dependencies]
python = ">=3.13"
anyio = "4.10.0"
asgiref = "3.9.1"
dj-database-url = "3.0.1"
Django = "5.2.5"
django-filter = "25.1"
django-widget-tweaks = "1.5.0"
djangorestframework = "3.16.1"
dulwich = "0.22.8"
et_xmlfile = "2.0.0"
fastjsonschema = "2.21.2"
filelock = "3.19.1"
findpython = "0.6.3"
gunicorn = "23.0.0"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.10"
installer = "0.7.0"
keyring = "25.6.0"
more-itertools = "10.8.0"
msgpack = "1.1.1"
numpy = "2.3.2"
openpyxl = "3.1.5"
packaging = "25.0"
pandas = "2.3.2"
pbs-installer = "2025.9.2"
pkginfo = "1.12.1.2"
platformdirs = "4.4.0"
psycopg2 = "2.9.10"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
pywin32-ctypes = "0.2.3"
RapidFuzz = "3.14.0"
requests = "2.32.5"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
six = "1.17.0"
sniffio = "1.3.1"
sqlparse = "0.5.3"
tomlkit = "0.13.3"
trove-classifiers = "2025.8.26.11"
tzdata = "2025.2"
urllib3 = "2.5.0"
virtualenv = "20.32.0"
whitenoise = "6.9.0"
xlsxwriter = "3.2.5"
zstandard = "0.24.0"

[tool.poetry.group.dev.dependencies]
# Add development dependencies if needed
# For example:
# pytest = "^7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
